--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Thumbs.db
 *.log
 npm-debug.log*
 
-# Documentation (excluding README.md)
+# Documentation (excluding README.md and design.md)
 *.md
 !README.md
+!.nova/specs/stellar-token-deployer/design.md
